...
    // MARK: - UI Components
    
    private lazy var scrollView = UIScrollView()
    private lazy var contentView = UIView()
    private lazy var titleLabel = UILabel()
    private lazy var profileImageView = UIImageView()
    private lazy var fullNameLabel = UILabel()
    private lazy var notificationContainer = UIView()
    private lazy var notificationImageView = UIImageView()
    private lazy var notificationLabel = UILabel()
    private lazy var notificationToggle = UISwitch()
    private lazy var notificationsStackView = UIStackView()
    private lazy var addNotificationButton = UIButton(type: .system)
    private lazy var touchIDContainer = UIView()
    private lazy var touchIDImageView = UIImageView()
    private lazy var touchIDLabel = UILabel()
    private lazy var touchIDToggle = CustomToggleSwitch()
    
    // MARK: - Properties
    
    private let viewModel: SettingsViewModel
    private var notifications: [NotificationTime] = []
    private var datePicker: UIDatePicker?
...
        touchIDToggle.snp.makeConstraints { make in
            make.trailing.centerY.equalToSuperview()
        }
    }
    
    private func setupAccessibilityIdentifiers() {
        titleLabel.accessibilityIdentifier = "settingsTitleLabel"
        profileImageView.accessibilityIdentifier = "profileImageView"
        fullNameLabel.accessibilityIdentifier = "fullNameLabel"
        
        notificationContainer.accessibilityIdentifier = "notificationContainer"
        notificationImageView.accessibilityIdentifier = "notificationImageView"
        notificationLabel.accessibilityIdentifier = "notificationLabel"
...
