...
//        let mockAuthService = MockAuthService()
//        let mockQuestionService = MockQuestionService()
//        let mockJournalService = MockJournalService()
//        let mockAnalysisService = MockAnalysisService()
//        let mockNotificationService = MockNotificationService()
//        
//        if let longUserName = ProcessInfo.processInfo.environment["UI_TEST_LONG_USER_NAME"] {
//            UserDefaults.standard.set(longUserName, forKey: "testUserFullName")
//        }
//        let successString = ProcessInfo.processInfo.environment["UI_TEST_LOGIN_SUCCESS"]
//        let errorString = ProcessInfo.processInfo.environment["UI_TEST_LOGIN_ERROR"]
//        let shouldSucceed = successString == "true"
//        let shouldShowError = errorString == "true"
...
